--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -1,9 +1,34 @@
+/* General Styles and Fonts*/
+@font-face {
+  font-family: 'StyreneA-Black';
+  src: url('./fonts/styrene-font-family-1757969151-0/StyreneB-Regular-Trial-BF63f6cbe9db1d5.otf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'StyreneA-Bold';
+  src: url('./fonts/styrene-font-family-1757969151-0/StyreneA-Bold-Trial-BF63f6cbda1877f.otf') format('opentype');
+  font-weight: bold;
+  font-style: normal;
+}
+
+/* Body */
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+  line-height: 1.6;
+  text-align: center;
+}
+
 /* Navigation Bar */
 nav {
   z-index: 1000;
   box-sizing: border-box;
   background-color: rgb(247, 255, 250);
-  height: 13vh;
+  height: 15vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -12,17 +37,81 @@ nav {
   
 }
 
+nav h1 a {
+  margin-left: 20px;
+  font-family: 'StyreneA-Black', sans-serif;
+  font-size: 24px;
+  color: rgb(136, 96, 96);
+  text-decoration: none;
+}
+
+nav h1 a:hover {
+  color: #555;  
+  text-decoration: none;
+}
+
+nav label {
+  margin-left: 20px;
+  font-family: 'StyreneA-Black', sans-serif;
+  font-size: 24px;
+  color: rgb(136, 96, 96);
+}
+
 nav ul {
   list-style: none;
   display: flex;
   padding: 0;
+  margin: 0 20px 0 0;
+  font-family: 'StyreneA-Bold', sans-serif;
 }
 
 nav ul li {
   margin: 0 15px;
 }
 
+nav ul li a {
+  text-decoration: none;
+  color: rgb(136, 96, 96);
+  font-size: 18px;
+  transition: color 0.3s ease;
+}
+
+nav a:hover {
+  color: #555;  
+  text-decoration: underline;
+}
+
 .nav-dimmed {
   opacity: 0.75;
   transition: opacity 0.5s ease; 
+}
+
+/* Home */
+header {
+  background: url('../images/home-bg.jpg') no-repeat center center/cover;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: rgb(136, 96, 96);
+  text-align: center;
+}
+
+/* About Us */
+#about-us {
+  padding: 60px 20px;
+  background-color: #ecd1d1;
+}
+
+/* Gallery */
+#gallery {  
+    padding: 60px 20px;
+    background-color: #f4f4f4;
+}
+
+/* Contact */
+#contact {
+  padding: 60px 20px;
+  background-color: #ecd1d1;
 }
