--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -17,8 +17,8 @@
 body {
   margin: 0;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
-  color: #333;
+  background-color: #FFFFF9;
+  color: #B87432;
   line-height: 1.6;
   text-align: center;
 }
@@ -27,7 +27,7 @@ body {
 nav {
   z-index: 1000;
   box-sizing: border-box;
-  background-color: rgb(247, 255, 250);
+  background-color: #FFFFF9;
   height: 15vh;
   width: 100%;
   display: flex;
@@ -41,12 +41,12 @@ nav h1 a {
   margin-left: 20px;
   font-family: 'StyreneA-Black', sans-serif;
   font-size: 24px;
-  color: rgb(136, 96, 96);
+  color: #B87432;
   text-decoration: none;
 }
 
 nav h1 a:hover {
-  color: #555;  
+  color: #B87432;  
   text-decoration: none;
 }
 
@@ -54,7 +54,7 @@ nav label {
   margin-left: 20px;
   font-family: 'StyreneA-Black', sans-serif;
   font-size: 24px;
-  color: rgb(136, 96, 96);
+  color: #DF914B;
 }
 
 nav ul {
@@ -77,7 +77,7 @@ nav ul li a {
 }
 
 nav a:hover {
-  color: #555;  
+  color: #B87432;  
   text-decoration: underline;
 }
 
@@ -94,20 +94,20 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: rgb(136, 96, 96);
+  color: #B87432;
   text-align: center;
 }
 
 /* About Us */
 #about-us {
   padding: 60px 20px;
-  background-color: #ecd1d1;
+  background-color: #F3DFCB;
 }
 
 /* Gallery */
 #gallery {  
     padding: 60px 20px;
-    background-color: #f4f4f4;
+    background-color: #FFFFF9;
 }
 
 /* Contact */
