--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -176,7 +176,7 @@ header {
   gap: 100px;
 }
 
-#profile {
+.profile {
   width: 100%;
   height: 250px;
   object-fit: cover;
@@ -184,14 +184,14 @@ header {
 }
 
 
-#profile1 {
+.profile1 {
   width: 100%;
   height: 250px;
   object-fit: cover;
   object-position: center center;
 }
 
-#profile2 {
+.profile2 {
   width: 100%;
   height: 250px;
   object-fit: cover;
