--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -104,14 +104,14 @@ header {
 /* About Us */
 #about-us {
   padding: 60px 20px;
-  background-color: #F3DFCB;
+  background-color: #FFFFF9;
   display: grid;
 }
 
 /* Gallery */
 #gallery {
   padding: 60px 20px;
-  background-color: #FFFFF9;
+  background-color: #F3DFCB;
 }
 
 /* Contact */
@@ -174,6 +174,7 @@ header {
   display: flex;
   justify-content: center;
   gap: 100px;
+  margin-top: 3em;
 }
 
 .profile {
