--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -13,10 +13,24 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'BMDOHYEON_TTF';
+  src: url('./fonts/BMDOHYEON_ttf.ttf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Monarch_Bold';
+  src: url('./fonts/Monark-Bold_FontYukle/Monark\ Bold.ttf') format('opentype');
+  font-weight: 900;
+  font-style: normal;
+}
+
 /* Body */
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Monarch_Bold', sans-serif;
   background-color: #FFFFF9;
   color: #B87432;
   line-height: 1.6;
@@ -28,7 +42,7 @@ nav {
   z-index: 1000;
   box-sizing: border-box;
   background-color: #FFFFF9;
-  height: 15vh;
+  height: 12vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -42,7 +56,7 @@ nav {
 }
 
 nav h1 a {
-  font-family: 'StyreneA-Black', sans-serif;
+  font-family: 'Monarch_Bold', sans-serif;
   font-size: 24px;
   color: #B87432;
   text-decoration: none;
@@ -55,7 +69,7 @@ nav h1 a:hover {
 
 nav label {
   margin-left: 20px;
-  font-family: 'StyreneA-Black', sans-serif;
+  font-family: 'Monarch_Bold', sans-serif;
   font-size: 24px;
   color: #DF914B;
 }
@@ -65,7 +79,7 @@ nav ul {
   display: flex;
   padding: 0;
   margin: 0 20px 0 0;
-  font-family: 'StyreneA-Bold', sans-serif;
+  font-family: 'Monarch_Bold', sans-serif;
 }
 
 nav ul li {
