--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -49,7 +49,8 @@ nav {
   justify-content: space-between;
   position: fixed;
 }
-.title{
+
+.title {
   margin-block-start: 0em;
   margin-block-end: 0em;
   margin: 0 0 0 0;
@@ -177,6 +178,11 @@ header {
   color: #b5662a;
 }
 
+.project-title>a {
+  text-decoration: none;
+  color: #b5662a
+}
+
 .project-desc {
   font-style: italic;
   font-size: 0.9rem;
@@ -185,7 +191,7 @@ header {
   text-align: center;
 }
 
-.projects2{
+.projects2 {
   display: flex;
   justify-content: center;
   gap: 100px;
