--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -1,4 +1,4 @@
-/* General Styles and Fonts*/
+/* General Styles and Fonts */
 @font-face {
   font-family: 'StyreneA-Black';
   src: url('./fonts/styrene-font-family-1757969151-0/StyreneB-Regular-Trial-BF63f6cbe9db1d5.otf') format('opentype');
@@ -15,14 +15,14 @@
 
 @font-face {
   font-family: 'BMDOHYEON_TTF';
-  src: url('./fonts/BMDOHYEON_ttf.ttf') format('opentype');
+  src: url('./fonts/BMDOHYEON_ttf.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Monarch_Bold';
-  src: url('./fonts/Monark-Bold_FontYukle/Monark\ Bold.ttf') format('opentype');
+  src: url("./fonts/Monark-Bold_FontYukle/Monark Bold.ttf") format('truetype');
   font-weight: 900;
   font-style: normal;
 }
@@ -30,7 +30,7 @@
 /* Body */
 body {
   margin: 0;
-  font-family: 'Monarch_Bold', sans-serif;
+  font-family: 'Monarch_Bold', Arial, sans-serif;
   background-color: #FFFFF9;
   color: #B87432;
   line-height: 1.6;
@@ -51,13 +51,13 @@ nav {
 }
 
 .title {
-  margin-block-start: 0em;
-  margin-block-end: 0em;
-  margin: 0 0 0 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin: 0;
 }
 
 nav h1 a {
-  font-family: 'Monarch_Bold', sans-serif;
+  font-family: 'Monarch_Bold', Arial, sans-serif;
   font-size: 24px;
   color: #B87432;
   text-decoration: none;
@@ -70,7 +70,7 @@ nav h1 a:hover {
 
 nav label {
   margin-left: 20px;
-  font-family: 'Monarch_Bold', sans-serif;
+  font-family: 'Monarch_Bold', Arial, sans-serif;
   font-size: 24px;
   color: #DF914B;
 }
@@ -80,7 +80,7 @@ nav ul {
   display: flex;
   padding: 0;
   margin: 0 20px 0 0;
-  font-family: 'Monarch_Bold', sans-serif;
+  font-family: 'Monarch_Bold', Arial, sans-serif;
 }
 
 nav ul li {
@@ -96,8 +96,7 @@ nav ul li a {
 
 nav a:hover {
   color: #B87432;
-  text-decoration: underline;
-  text-decoration-style: dotted;
+  text-decoration: underline dotted;
   text-decoration-thickness: 2px;
 }
 
@@ -137,16 +136,10 @@ header {
 }
 
 .vertical-line {
-  border: none;
-  /* Remove default border */
   border-top: 3px solid rgb(136, 96, 96);
-  /* Add a custom top border */
   margin-left: -1px;
-  /* Add some vertical spacing */
   width: 15%;
-  /* Set the width */
   text-align: center;
-  /* Center the line */
 }
 
 .projects {
@@ -167,8 +160,7 @@ header {
 .project-image {
   width: 100%;
   height: 250px;
-  background: #f1dac7;
-  /* placeholder color */
+  background: #f1dac7; /* placeholder color */
 }
 
 .project-title {
@@ -178,9 +170,9 @@ header {
   color: #b5662a;
 }
 
-.project-title>a {
+.project-title > a {
   text-decoration: none;
-  color: #b5662a
+  color: #b5662a;
 }
 
 .project-desc {
@@ -204,7 +196,6 @@ header {
   object-fit: cover;
   object-position: center 15%;
 }
-
 
 .profile1 {
   width: 100%;
