this code should allow users to go to various sections of the page smoothly while also allowing the page to expand for the document

--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -44,6 +44,32 @@ body {
   line-height: 1.6;
 }
 
+header {
+  background-image: linear-gradient(to right, #561119, #191864);
+  width: 100%;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  font-size: em;
+  font-style: normal;
+  font-weight: 700;
+  font-family: 'DM Serif Text', serif;
+  position: fixed;
+  margin-top: -198px;
+}
+
+header a {
+  color:#2b7de7
+}
+
+header a:hover {
+  color:#e25c3a
+}
+
+#articles {
+  margin-top: 198px;
+}
+
 .article{
     margin: 20px;
     text-align: left;
