--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -72,7 +72,7 @@ header a:hover {
   background: rgb(230, 156, 66);
   color: white;
   height: auto;
-  max-width: 600px;
+  width: 600px;
   padding: 6px 10px;
   border-radius: 5px;
   text-align: center;
