started adding annotations for art IV; need to fix smth about styling...

--- a/lab2/styles.css
+++ b/lab2/styles.css
@@ -155,7 +155,7 @@ header ul {
   background-color: #B31942;
 }
 
-.active, .collapsible-section:hover {
+#history .active, .collapsible-section:hover {
   background-color: #d5cbec;
 }
 
