--- a/lab1/resources/styles.css
+++ b/lab1/resources/styles.css
@@ -109,7 +109,7 @@ nav a:hover {
 
 /* Home */
 header {
-  height: 75vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -127,7 +127,7 @@ header {
 
 /* Gallery */
 #gallery {
-  padding: 60px 20px;
+  padding: 60px 60px 30px 0px;
   background-color: #F3DFCB;
 }
 
@@ -228,4 +228,48 @@ header {
   border-radius: 8px;
   background-color: #f5f5f5;
   width: 220px;
+}
+
+.ticker-container {
+  margin-bottom: -30px;
+  margin-top: 30px;
+  margin-left: -10%;
+  width: 120%;
+  overflow: hidden; /* incase data flows out of box*/
+  background-color: #333;
+  color: white;
+  padding: 10px 0;
+  box-sizing: border-box;
+}
+
+.ticker-content {
+  display: flex; 
+  width: max-content; 
+  animation: scroll-left 30s linear infinite; /* scrolling animation */
+}
+
+.ticker-content span {
+  font-family: monospace;
+  font-size: 16px;
+  white-space: nowrap; /* prevent the text from wrapping to the next line */
+  margin-right: 20px;
+}
+
+.ticker-content a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.ticker-container a:hover {
+  color: #9b7225;
+}
+
+/* borrows from mozilla keyframes */
+@keyframes scroll-left {
+  from {
+    transform: translateX(0%); 
+  }
+  to {
+    transform: translateX(-50%); 
+  }
 }
