--- a/lab1/resources/stonkly.css
+++ b/lab1/resources/stonkly.css
@@ -1,3 +1,7 @@
+#stonkly-info {
+    background-color: #f5e4be;
+}
+
 #link0 {
     margin-left: 40px;
     font-size: 30px;
@@ -16,4 +20,56 @@ canvas {
     width: 100%;
     height: 100%;
     z-index: -1;    
+}
+
+/* Stonkly title */
+#container {
+  color:#999;
+  text-transform: uppercase;
+  font-size: 2.5rem;
+  font-weight:bold;
+  padding-top:200px;  
+  width:65%;
+  bottom:45%;
+  display:block;
+  margin-top: -150px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#flip {
+  height:50px;
+  overflow:hidden;
+}
+
+#flip > div {
+  color:#ffffff;
+}
+
+#flip div:first-child {
+  animation: show 5s linear infinite;
+}
+
+#flip div {
+  background:#f6c052;
+}
+
+#flip div:first-child {
+  background:#d85a5a;
+}
+
+#flip div:last-child {
+  background:#42c58a;
+}
+
+@keyframes show {
+  0%   { margin-top: -10px; }
+  20%  { margin-top: -10px; }
+  25%  { margin-top: -75px; }
+  45%  { margin-top: -75px; }
+  50%  { margin-top: -140px; }
+  70%  { margin-top: -140px; }
+  75%  { margin-top: -75px; }
+  95%  { margin-top: -75px; }
+  100% { margin-top: 0; }
 }
