--- a/Stonkly/resources/stonkly.css
+++ b/Stonkly/resources/stonkly.css
@@ -6,7 +6,7 @@
 }
 
 #stonkly-info {
-    background-color: #f5e4be;
+    background-color: #F3DFCB;
 }
 
 #link0 {
@@ -122,6 +122,7 @@ canvas {
   padding-left: 2em;
   font-size: large;
 }
+
 
 #featureList > ul {
   list-style-type: none;
